--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,4 @@
+/* STYLES FOR REFACTOR.HTML WEBPAGE */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -8,23 +9,24 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+/* header styles start */
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,14 +34,15 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
+/* header styles end */
 
 a {
     color: #ffffff;
@@ -50,6 +53,7 @@ p {
     font-size: 16px;
 }
 
+/* header img hero start */
 .hero {
     height: 800px;
     width: 100%;
@@ -69,13 +73,15 @@ p {
     float: right;
     margin-left: 25px;
 }
+/* header img end */
 
-.content {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* Benefits of having SEO within a webpage style start */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -134,7 +140,9 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+/* Benefits styles end */
 
+/* styles for content in middle of page */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -188,8 +196,9 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
+/*styles for content end */
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
